--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </nav>
     <h1> I Love HTML </h1>
     <p> This is not appealing </p>
-    <p> I love Javascript </p>
+    //<p> I love Javascript </p>
   </body>
 </html>
