--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </nav>
     <h1> I Love HTML </h1>
     <p> This is not appealing </p>
-    <h1> XXX </h1>
+    <h1> XXXX </h1>
   </body>
 </html>
